Start fixing layout issues in Tablet and Desktop
Fixing layout issues as browser window
resizes from Mobile to Tablet to Desktop.
Have to adjust layout for About Me, Skills,
and Projects section as layout transitions
from one media query to the next.

--- a/public/styles/sass/components/_skills.scss
+++ b/public/styles/sass/components/_skills.scss
@@ -1,14 +1,6 @@
 .skills {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  
+    
   margin-top: 1em;
-
-
-  h2 {
-    text-align: center;
-  }
 
   ul {
     border: 1px solid black;
