--- a/public/styles/sass/layouts/_desktop.scss
+++ b/public/styles/sass/layouts/_desktop.scss
@@ -14,6 +14,43 @@
     }
   }
 
+  .main-content {
+    width: 90%;
+    margin: 0 auto;
+  }
+
+  .about-me {
+    display: flex;
+
+    .about-me-header{
+      width: 30%;
+    }
+    .story {
+      width: 70%;
+    }
+  }
+
+  .skills {
+    display: flex;
+    
+    .skills-header {
+      width: 30%;
+    }
+
+    .skills-container {
+      width: 70%;
+      display: flex;
+      flex-wrap: wrap;
+
+      ul {
+        // margin-left: 5em;
+        width: 30%;
+      }
+    }
+
+    
+  }
+
   .project-container {
     display: flex;
 
