--- a/public/styles/sass/layouts/_mobile.scss
+++ b/public/styles/sass/layouts/_mobile.scss
@@ -1,4 +1,5 @@
 @media only screen and (max-width: 400px) {
+
   .page {
     display: flex;
     flex-direction: column;
@@ -42,7 +43,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: 1.2em;
+    
 
     .story {
       margin: 0 1.5em;
@@ -54,7 +55,7 @@
   .skills {
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: center;
 
 
     h2 {
