--- a/public/styles/sass/layouts/_tablet.scss
+++ b/public/styles/sass/layouts/_tablet.scss
@@ -1,4 +1,19 @@
+//Fixes About Me section after it transitions from Mobile to Tablet
+@media only screen and (min-width: 401px) and (max-width: 795px) {
+  .about-me {
+    display: flex;
+    flex-direction: column;
+    margin: 2em 2em;
+
+    align-items: center;
+
+  }
+
+}
+
+
 @media only screen and (min-width: 401px) and (max-width: 960px) {
+
   nav {
     display: flex;
     justify-content: space-between;
@@ -23,22 +38,33 @@
 
     .story {
       width: 70%;
+      margin-left: 1em;
     }
   }
 
   .skills {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    margin: 0 auto;
+    flex-direction: column;
+    
+    justify-content: center;
+    margin: 0 3em;
+
 
 
     h2 {
       width: 100%;
+      text-align: center;
     }
 
-    ul {
-      width: 20%;
+    .skills-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+
+      ul {
+        width: 40%;
+      }
+
     }
   }
 
